:fire: remove global dashboard
